syntax = "proto3";
package packet_transfer;

message PacketData {
    bytes packets = 1;
    int64 timestamp = 2;
}

message TransferAck {
    string message = 1;
}

service PacketTransfer {
    rpc TransferPackets (PacketData) returns (TransferAck);
}
